fixed ingredients get handler and refactor some translations

--- a/frontend/public/locales/de/translation.json
+++ b/frontend/public/locales/de/translation.json
@@ -43,6 +43,7 @@
     },
     "search-recipe": "Rezept suchen",
     "sidebar": {
+        "ingredients": "Zutaten",
         "recipes": "Rezepte",
         "settings": "Einstellungen",
         "tags": "Tag"
