--- a/frontend/public/locales/en/recipe.json
+++ b/frontend/public/locales/en/recipe.json
@@ -27,5 +27,9 @@
     },
     "input": {
         "filter": "Filter Recipes"
+    },
+    "search": {
+        "recipes": "Search recipe",
+        "recipes-empty": "No recipe found"
     }
 }
