--- a/frontend/public/locales/en/recipe.json
+++ b/frontend/public/locales/en/recipe.json
@@ -7,17 +7,22 @@
         "update": "Update Recipe"
     },
     "error": {
+        "description-required": "Description is required of Recipe",
         "ingre-amount": "Ingredients can not be empty or zero",
         "ingre-name": "Please provide a name",
         "ingre-unit": "Please provide a unit",
+        "name-required": "Name is required of Recipe",
         "step-length-255": "Step cannot be longer than 255 characters",
-        "step-length-zero": "Step cannot be empty"
+        "step-length-zero": "Step cannot be empty",
+        "too-long": "Input is too long, it cannot be longer than 255 characters"
     },
     "heading": {
         "create-heading": "Create Recipe",
         "ingredients": "List of all Ingredients",
+        "ingredients-title": "Input your Ingredients",
         "overview-description": "All recipes are listed here",
         "overview-title": "Recipe Overview",
+        "step-title": "Input your Steps",
         "steps": "Instruction:",
         "tags": "Tags:",
         "update-heading": "Update Recipe"
@@ -25,8 +30,20 @@
     "input": {
         "filter": "Filter Recipes"
     },
+    "placeholder": {
+        "amount": "Amount",
+        "description": "Description of Recipe",
+        "name": "Name of Recipe",
+        "select-tags": "Select tags",
+        "step": "Step",
+        "tags-empty": "Not tags are found"
+    },
     "search": {
         "recipes": "Search recipe",
         "recipes-empty": "No recipe found"
+    },
+    "toast": {
+        "created-success": "Recipe is successful created",
+        "updated-success": "Recipe is successful updated"
     }
 }
