--- a/frontend/public/locales/en/tag.json
+++ b/frontend/public/locales/en/tag.json
@@ -1,7 +1,8 @@
 {
     "button": {
         "create": "Create Tag",
-        "delete": "Delete Tag"
+        "delete": "Delete Tag",
+        "update": "Update Tag"
     },
     "dialog": {
         "create-description": "Description for creating a tag",
@@ -14,9 +15,6 @@
         "too-long": "Name is too long, it cannot be longer than 255 characters"
     },
     "heading": {
-        "detail-description": "Here you see all recipes which are connected to tags",
-        "detail-title": "Tag Details",
-        "overview-description": "All tags are listed here",
         "overview-title": "Tag Overview"
     },
     "input": {
@@ -26,7 +24,8 @@
         "empty": "No tags are found"
     },
     "toast": {
-        "created-success": "Tag is successful created",
-        "deleted-success": "Tag is successful deleted"
+        "created-success": "Tag successful created",
+        "deleted-success": "Tag successful deleted",
+        "updated-success": "Tag successful updated"
     }
 }
