fixed filter for recipes and some refactoring

--- a/frontend/public/locales/en/recipe.json
+++ b/frontend/public/locales/en/recipe.json
@@ -3,6 +3,7 @@
         "add-tags": "Add Tags",
         "back": "Back",
         "create": "Create Recipe",
+        "create-short": "Add",
         "next": "Next",
         "update": "Update Recipe"
     },
