--- a/frontend/public/locales/de/recipe.json
+++ b/frontend/public/locales/de/recipe.json
@@ -2,53 +2,66 @@
     "button": {
         "add-tags": "Tags hinzuf\u00fcgen",
         "back": "Zur\u00fcck",
+        "copy": "Kopieren",
         "create": "Rezept erstellen",
+        "create-short": "Erstellen",
+        "delete": "L\u00f6schen",
+        "edit": "Bearbeiten",
         "next": "Weiter",
         "update": "Rezept aktualisieren"
     },
     "error": {
-        "description-required": "Beschreibung fehlt",
-        "ingre-amount": "Zutaten d\u00fcrfen nicht leer oder null sein",
-        "ingre-name": "Bitte gib einen Namen an",
-        "ingre-unit": "Bitte gib eine Einheit an",
-        "name-required": "Name vom Rezept fehlt",
-        "step-length-255": "Schritt darf nicht l\u00e4nger als 255 Zeichen sein",
-        "step-length-zero": "Schritt darf nicht leer sein",
-        "too-long": "Eingabe ist zu lang, darf maximal 255 Zeichen lang sein"
+        "description-required": "Eine Beschreibung des Rezepts ist erforderlich",
+        "ingre-amount": "Zutatenmenge darf nicht leer oder null sein",
+        "ingre-name": "Bitte einen Namen angeben",
+        "ingre-unit": "Bitte eine Einheit angeben",
+        "name-required": "Ein Rezeptname ist erforderlich",
+        "step-length-255": "Einzelschritt darf nicht l\u00e4nger als 255 Zeichen sein",
+        "step-length-zero": "Einzelschritt darf nicht leer sein",
+        "too-long": "Die Eingabe ist zu lang, sie darf maximal 255 Zeichen enthalten"
+    },
+    "filter": {
+        "grid": "Rasteransicht",
+        "show-all-tag": "Alle Tags anzeigen",
+        "table": "Tabellenansicht",
+        "tag": "Tag",
+        "view": "Ansicht"
     },
     "heading": {
-        "create": "Erstelle Rezept",
+        "create": "Rezept erstellen",
         "ingredients": "Liste aller Zutaten",
-        "ingredients-title": "Gebe Zutaten ein",
-        "overview-title": "Rezept \u00dcbersicht",
-        "step-title": "Gebe deine Anleitungen ein",
+        "ingredients-title": "Gib deine Zutaten ein",
+        "overview-description": "Allgemeine Informationen zum Rezept",
+        "overview-title": "Rezept\u00fcbersicht",
+        "step-title": "Gib deine Schritte ein",
         "steps": "Anleitung:"
     },
-    "input": {
-        "filter": "Rezept suchen"
+    "label": {
+        "placeholder": "Bitte Eingabe machen"
     },
     "placeholder": {
         "amount": "Menge",
-        "description": "Beschreibung om Rezept",
-        "name": "Name vom Rezept",
-        "select-tags": "W\u00e4hle Tags aus",
-        "step": "Einzelner Schritt",
+        "description": "Beschreibung des Rezepts",
+        "name": "Name des Rezepts",
+        "name-ingredients": "Zutaten name",
+        "select-tags": "Tags ausw\u00e4hlen",
+        "step": "Schritt",
         "tags-empty": "Keine Tags gefunden"
     },
     "search": {
-        "recipes": "Suche Rezepte",
+        "recipes": "Rezepte suchen",
         "recipes-empty": "Keine Rezepte gefunden"
     },
     "stepper": {
-        "ingredients-description": "Gebe zutaten an für das Rezept",
+        "ingredients-description": "Gib die Zutaten f\u00fcr das Rezept an",
         "ingredients-title": "Zutaten",
-        "meta-description": "Gebe allgemeine Information über das Rezept an",
-        "meta-title": "Allgemeine Information",
-        "steps-description": "Gebe einzelne Schritte für das Rezept an",
+        "meta-description": "Allgemeine Informationen angeben",
+        "meta-title": "Allgemeine Informationen",
+        "steps-description": "Anleitungsschritte f\u00fcr das Rezept angeben",
         "steps-title": "Anleitung"
     },
     "toast": {
-        "created-success": "Rezept erfolgreich erstellt",
-        "updated-success": "Rezept erfolgreich aktualisiert"
+        "created-success": "Rezept wurde erfolgreich erstellt",
+        "updated-success": "Rezept wurde erfolgreich aktualisiert"
     }
 }
