remove search function because dont need it with the new design

--- a/frontend/public/locales/de/recipe.json
+++ b/frontend/public/locales/de/recipe.json
@@ -22,6 +22,7 @@
     },
     "filter": {
         "grid": "Rasteransicht",
+        "layout": "Ansicht",
         "show-all-tag": "Alle Tags anzeigen",
         "table": "Tabellenansicht",
         "tag": "Tag",
